--- a/css/style.css
+++ b/css/style.css
@@ -544,37 +544,43 @@ footer {
 .services-content hr.styled {
   width: 10%;
   margin-top: -10px; }
-.services-content .services {
+.services-content .services-1 {
   width: calc(100% - 2rem);
-  margin: 1rem auto;
+  margin: 2rem auto 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 1rem; }
-  .services-content .services .service {
-    padding: 0 1rem;
-    margin: 1rem 0;
-    width: 100%;
-    border: 1px solid black;
-    text-align: center;
-    font-size: 1.2rem;
-    /*
-    @media screen and (min-width: 900px) {
-        width: 49%;
-        display: inline-block;
-        margin: 0;
-        height: 100%;
-    }
-    */ }
-    .services-content .services .service hr.styled {
-      width: 150px; }
-    .services-content .services .service p:last-child {
-      font-weight: bold;
-      font-size: 1.5rem; }
-  @media screen and (min-width: 1200px) {
-    .services-content .services {
-      width: 80%; } }
-  @media screen and (min-width: 1400px) {
-    .services-content .services {
-      width: 60%; } }
+.services-content .services-2 {
+  width: calc(100% - 2rem);
+  margin: 0 auto 2rem auto; }
+  .services-content .services-2 .service {
+    padding: 0 1rem 2rem 1rem; }
+.services-content .service {
+  display: flex;
+  flex-direction: column;
+  padding: 0 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
+  border: 1px solid black;
+  text-align: center;
+  font-size: 1.2rem; }
+  .services-content .service hr.styled {
+    width: 150px; }
+  .services-content .service .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%; }
+  .services-content .service .price p {
+    font-weight: bold;
+    font-size: 1.5rem; }
+@media screen and (min-width: 1200px) {
+  .services-content .services-1,
+  .services-content .services-2 {
+    width: 80%; } }
+@media screen and (min-width: 1400px) {
+  .services-content .services-1,
+  .services-content .services-2 {
+    width: 60%; } }
 
 /*# sourceMappingURL=style.css.map */
