--- a/scss/partials/components/_images.scss
+++ b/scss/partials/components/_images.scss
@@ -1,6 +1,7 @@
 .homepage-image {
-    background: url("../../../imgs/thedoc.jpg") no-repeat;
+    background: url("../imgs/thedoc.jpg") no-repeat;
     background-size: 100% 100%;
     width: 500px;
     height: 500px;
+    margin: auto;
 }
