--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,8 @@
         "partials/components/buttons",
         "partials/components/icons",
         "partials/components/images",
+        "partials/layout/contact",
+        "partials/layout/sidenav",
         "partials/utilities/media-queries";
        
         
