Minor tweaks: landing page showcase title positioning and backgrounbd height, contact page height and content positioning.

--- a/css/style.css
+++ b/css/style.css
@@ -478,10 +478,7 @@ hr.styled-small {
 .background-img {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../imgs/notes.jpg");
   background-size: 100% 100%;
-  height: 500px; }
-  @media screen and (min-width: 768px) {
-    .background-img {
-      height: 850px; } }
+  height: calc(100vh - 75px); }
 
 .title-cnt {
   display: flex;
@@ -490,7 +487,9 @@ hr.styled-small {
   justify-content: center;
   align-items: center;
   color: white;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  height: 100%;
+  padding-bottom: 10rem; }
   .title-cnt h1 {
     white-space: nowrap;
     font-size: 30px;
@@ -597,9 +596,6 @@ hr.styled-small {
     @media screen and (min-width: 768px) {
       .cntct-main .card {
         width: 450px; } }
-    @media screen and (min-width: 1260px) {
-      .cntct-main .card {
-        width: 550px; } }
     .cntct-main .card h4 {
       font-size: 40px;
       margin-top: 0px;
@@ -744,16 +740,14 @@ hr.styled-small {
 .cntct-frm-bckgrnd {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) black;
   opacity: 0.85;
-  margin: 10px 0px;
-  height: 486px; }
-  @media screen and (min-width: 768px) {
-    .cntct-frm-bckgrnd {
-      height: 725px; } }
+  height: calc(100vh - 175px); }
 
 .cntct-frm {
   margin: auto;
   width: 300px;
-  display: flex; }
+  display: flex;
+  height: 100%;
+  align-items: center; }
   @media screen and (min-width: 768px) {
     .cntct-frm {
       width: 700px;
@@ -969,6 +963,37 @@ footer {
   width: 500px;
   height: 500px;
   margin: auto; }
+
+.errormsg {
+  color: red; }
+
+.succmsg {
+  color: #00d300; }
+
+.pushy-open-right .pushy {
+  width: 400px; }
+
+.pushy {
+  background: #333645; }
+  .pushy .tabs {
+    display: block;
+    text-align: center;
+    text-transform: uppercase; }
+    .pushy .tabs .container {
+      padding: 30px; }
+      .pushy .tabs .container a {
+        color: white; }
+      .pushy .tabs .container .btn {
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 3px;
+        outline: 1px solid rgba(0, 0, 0, 0.25);
+        font-size: 1.125rem;
+        padding: 22px 0;
+        margin-top: 20px; }
+        .pushy .tabs .container .btn:first-child {
+          margin-top: 0; }
+        .pushy .tabs .container .btn:hover {
+          background: #38383d; }
 
 @media screen and (min-width: 768px) {
   .media {
