Added Terms and Privacy pages as well as adding functionality to footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
         "partials/components/images",
         "partials/layout/contact",
         "partials/layout/sidenav",
+        "partials/layout/terms-privacy",
         "partials/utilities/media-queries";
        
         
