--- a/css/style.css
+++ b/css/style.css
@@ -995,6 +995,17 @@ footer {
         .pushy .tabs .container .btn:hover {
           background: #38383d; }
 
+.terms-privacy-content {
+  width: 100%;
+  margin: 0 auto;
+  padding: 1rem; }
+  @media screen and (min-width: 800px) {
+    .terms-privacy-content {
+      width: 85%; } }
+  @media screen and (min-width: 1200px) {
+    .terms-privacy-content {
+      width: 70%; } }
+
 @media screen and (min-width: 768px) {
   .media {
     width: 750px;
